# OpenQ4-GameLibs

./: .gitignore  AGENTS.md  LICENSE  README.md  meson.build  meson_options.txt
doc/legacy/: EULA.Development Kit.rtf  readme.txt
source/: meson.build
source/buildscripts/: list_sources.py
source/game/: Actor.h  Effect.cpp  Entity.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Item.cpp  Item.h  Light.cpp  Misc.cpp  Mover.cpp  Mover.h  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.cpp  PlayerView.h  Projectile.cpp  Projectile.h  Trigger.cpp  Weapon.cpp  Weapon.h
source/game/ai/: AAS_tactical.h  AI_Medic.cpp
source/game/anim/: Anim.h  Anim_Blend.cpp
source/game/client/: ClientEffect.cpp  ClientEntity.cpp
source/game/gamesys/: SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
source/game/vehicle/: Vehicle.cpp
source/mpgame/: AF.cpp  Effect.cpp  Game_local.cpp  Game_local.h  Player.cpp  Player.h  PlayerView.cpp  PlayerView.h  Projectile.cpp  Weapon.cpp  Weapon.h
source/mpgame/ai/: AI_Medic.cpp
source/mpgame/gamesys/: Class.cpp  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp
source/mpgame/weapon/: WeaponLightningGun.cpp
src/: meson.build
src/cm/: CollisionModel.h
src/framework/: Common.h  File.h  FileSystem.h  licensee.h
src/framework/async/: NetworkSystem.h
src/game/: AF.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.h  Camera.cpp  Camera.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h  Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Item.h  Light.cpp  Light.h  Moveable.cpp  Moveable.h  Mover.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Playback.cpp  Player.cpp  Player.h  PlayerView.cpp  Player_States.cpp  Projectile.cpp  Projectile.h  Trigger.cpp  Trigger.h  Weapon.cpp  Weapon.h
src/game/ai/: AAS.cpp  AAS.h  AAS_local.h  AI.cpp  AI_Move.cpp  AI_States.cpp  Monster_BossMakron.cpp  Monster_HeavyHoverTank.cpp  Monster_RepairBot.cpp  Monster_StroggHover.cpp
src/game/anim/: Anim.h  Anim_Blend.cpp  Anim_Import.cpp
src/game/bots/: Bot.cpp  Bot.h  BotAI.cpp  BotAI_Battle_Attacked.cpp  BotAI_Battle_Fight.cpp  BotAI_Battle_NBG.cpp  BotAI_Battle_Retreat.cpp  Bot_goal.cpp  Bot_goal.h  Bot_weapons.cpp
src/game/client/: ClientEffect.cpp  ClientEntity.cpp  ClientEntity.h  ClientModel.cpp  ClientMoveable.cpp  ClientMoveable.h
src/game/gamesys/: Class.h  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
src/game/physics/: Clip.cpp  Clip.h  Physics.cpp  Physics_Player.cpp  Physics_RigidBody.cpp
src/game/script/: Script_Compiler.cpp  Script_Thread.cpp
src/game/vehicle/: Vehicle.cpp  Vehicle.h  VehicleAnimated.cpp  VehicleParts.cpp  VehicleParts.h  VehiclePosition.cpp  Vehicle_Walker.cpp
src/game/weapon/: WeaponGauntlet.cpp  WeaponLightningGun.cpp  WeaponMachinegun.cpp  WeaponNailgun.cpp  WeaponRocketLauncher.cpp
src/idlib/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Str.cpp  Str.h  precompiled.h
src/idlib/bv/: Box.cpp
src/idlib/containers/: HashTable.h  Queue.h
src/idlib/math/: Curve.h  Math.cpp  Math.h  Pluecker.cpp
src/mpgame/: Actor.cpp  Actor.h  Camera.cpp  Effect.cpp  Effect.h  Entity.cpp  Entity.h  Game_local.cpp  Game_local.h  Game_network.cpp  Item.h  Lagometer.cpp  Light.cpp  Light.h  Moveable.cpp  Moveable.h  MultiplayerGame.cpp  MultiplayerGame.h  Playback.cpp  Player.cpp  Player.h  PlayerView.cpp  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
src/mpgame/ai/: AI.cpp  AI_Move.cpp  Monster_BossMakron.cpp  Monster_HeavyHoverTank.cpp  Monster_RepairBot.cpp  Monster_StroggHover.cpp
src/mpgame/anim/: Anim.h  Anim_Blend.cpp  Anim_Import.cpp
src/mpgame/client/: ClientEffect.cpp  ClientEffect.h  ClientEntity.cpp  ClientEntity.h  ClientModel.cpp  ClientModel.h  ClientMoveable.cpp  ClientMoveable.h
src/mpgame/gamesys/: SysCmds.cpp  SysCvar.h
src/mpgame/physics/: Physics.cpp  Physics_Player.cpp  Physics_RigidBody.cpp
src/mpgame/script/: Script_Compiler.cpp  Script_Thread.cpp
src/mpgame/vehicle/: Vehicle.cpp  VehicleAnimated.cpp  VehicleParts.cpp  VehiclePosition.cpp  Vehicle_Walker.cpp
src/mpgame/weapon/: WeaponBlaster.cpp  WeaponGauntlet.cpp  WeaponLightningGun.cpp  WeaponMachinegun.cpp  WeaponNailgun.cpp  WeaponRocketLauncher.cpp
src/renderer/: ImageOpts.h  Material.h  Model.h  RenderSystem.h
src/sys/: sys_public.h
